--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = [
     {name = "Volodymyr Zherdetskyi",email = "91687684+vzhV@users.noreply.github.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4"
 dependencies = [
-    "django (>=5.2.3,<6.0.0)"
+    "django (>=5.2.3,<6.0.0)",
+    "xhtml2pdf (>=0.2.17,<0.3.0)"
 ]
 
 
