--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = ">=3.11,<4"
 dependencies = [
     "django (>=5.2.3,<6.0.0)",
-    "xhtml2pdf (>=0.2.17,<0.3.0)"
+    "xhtml2pdf (>=0.2.17,<0.3.0)",
+    "djangorestframework (>=3.16.0,<4.0.0)",
+    "drf-spectacular (>=0.28.0,<0.29.0)"
 ]
 
 
