--- a/.env-example
+++ b/.env-example
@@ -7,3 +7,14 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
+
+REDIS_PASSWORD=password
+REDIS_URL=redis://:password@redis:6379/0
+
+EMAIL_HOST=mailhog
+EMAIL_PORT=1025
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_USE_TLS=False
+EMAIL_USE_SSL=False
+DEFAULT_FROM_EMAIL=noreply@example.com
