--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,16 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:latest
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+    env_file:
+      - .env
+    ports:
+      - "6379:6379"
+    restart: always
+
+
   web:
     build:
       context: .
@@ -34,10 +44,28 @@ services:
       - .env
     depends_on:
       - db
+      - redis
     volumes:
       - .:/app
     ports:
       - "8000:8000"
 
+  celery:
+    build:
+      context: .
+    command: celery -A CVProject worker --loglevel=info
+    env_file:
+      - .env
+    depends_on:
+      - db
+      - redis
+    volumes:
+      - .:/app
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    ports:
+      - "8025:8025"
+      - "1025:1025"
 volumes:
   postgres_data:
