--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "xhtml2pdf (>=0.2.17,<0.3.0)",
     "djangorestframework (>=3.16.0,<4.0.0)",
     "drf-spectacular (>=0.28.0,<0.29.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)"
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "celery (>=5.5.3,<6.0.0)",
+    "redis (>=6.2.0,<7.0.0)"
 ]
 
 
