--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "drf-spectacular (>=0.28.0,<0.29.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "celery (>=5.5.3,<6.0.0)",
-    "redis (>=6.2.0,<7.0.0)"
+    "redis (>=6.2.0,<7.0.0)",
+    "openai (>=1.86.0,<2.0.0)"
 ]
 
 
